create accessControl && upgrade template

--- a/templates/admin/list.html.twig
+++ b/templates/admin/list.html.twig
@@ -16,5 +16,6 @@
             </li>
         {% endfor %}
     </ul>
+    <a class="btn btn-primary" href="{{ path('create_footprint') }}">Ajouter</a>
 </div>
 {% endblock %}
