--- a/templates/admin/update.html.twig
+++ b/templates/admin/update.html.twig
@@ -20,7 +20,8 @@
             </div>
             <br>
             <div class="text-center">
-                <button class="btn btn-primary btn-lg" type="submit">Ajouter</button>
+                <button class="btn btn-primary" type="submit">Modifier</button>
+                <a class="btn btn-primary" href="{{ path('remove_footprint', {'id': footprint.id}) }}">Supprimer</a>
             </div>
             {{ form_end(form) }}
         </div>
