add some constraints in entity && update template (create and register)

--- a/templates/admin/create.html.twig
+++ b/templates/admin/create.html.twig
@@ -8,14 +8,10 @@
             {{ form_start(form) }}
             <div class="row">
                 <div class="col-12">
-                    {{ form_label(form.expenseType) }}
-                    <br>
-                    {{ form_widget(form.expenseType) }}
+                    {{ form_row(form.expenseType) }}
                 </div>
                 <div class="col-12">
-                    {{ form_label(form.ratio) }}
-                    <br>
-                    {{ form_widget(form.ratio) }}
+                    {{ form_row(form.ratio) }}
                 </div>
             </div>
             <br>
