--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,10 @@
         {% endblock %}
     </head>
     <body>
+        {% include 'navbar.html.twig' %}
+        <div class="pt-5 mt-5">
         {% block body %}{% endblock %}
+        </div>
         {% block javascripts %}
             <!-- JS, Popper.js, and jQuery -->
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
