--- a/templates/admin/list.html.twig
+++ b/templates/admin/list.html.twig
@@ -10,12 +10,12 @@
                 <div class="item">
                     {{footprint.expenseType}}: {{footprint.ratio}}
                     <br>
-                    <a class="btn btn-primary" href="{{ path('update_footprint', {'id': footprint.id}) }}">Modifier</a>
-                    <a class="btn btn-primary" href="{{ path('remove_footprint', {'id': footprint.id}) }}">Supprimer</a>
+                    <a class="btn btn-secondary" href="{{ path('update_footprint', {'id': footprint.id}) }}">Modifier</a>
+                    <a class="btn btn-secondary" href="{{ path('remove_footprint', {'id': footprint.id}) }}">Supprimer</a>
                 </div>
             </li>
         {% endfor %}
     </ul>
-    <a class="btn btn-primary" href="{{ path('create_footprint') }}">Ajouter</a>
+    <a class="btn btn-secondary" href="{{ path('create_footprint') }}">Ajouter</a>
 </div>
 {% endblock %}
