--- a/templates/calculate/index.html.twig
+++ b/templates/calculate/index.html.twig
@@ -16,7 +16,7 @@
     </div>
     <br>
     <div class="text-center">
-        <button class="btn btn-primary btn-lg" type="submit">Calculate</button>
+        <button class="btn btn-secondary btn-lg" type="submit">Calculate</button>
     </div>
     {{ form_end(form) }}
     <br>
