--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -16,7 +16,7 @@
             label: 'Mot de passe'
         }) }}
 
-        <button type="submit" class="btn btn-primary">S'inscrire</button>
+        <button type="submit" class="btn btn-secondary">S'inscrire</button>
     {{ form_end(registrationForm) }}
 </div>
 {% endblock %}
